src/objects/Avaluos__c.object
<CustomObject>
    <fields>
        <fullName>Area_m2_construccion__c</fullName>
        <label>Área m2 construcción</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_m2_privada__c</fullName>
        <label>Área m2 privada</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barrio_avaluo__c</fullName>
        <label>Barrio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_avaluo__c</fullName>
        <label>Ciudad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Departamento_avaluo__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abejorral</fullName>
                </value>
                <value>
                    <fullName>Ábrego</fullName>
                </value>
                <value>
                    <fullName>Abriaquí</fullName>
                </value>
                <value>
                    <fullName>Acacías</fullName>
                </value>
                <value>
                    <fullName>Acandí</fullName>
                </value>
                <value>
                    <fullName>Acevedo</fullName>
                </value>
                <value>
                    <fullName>Achí</fullName>
                </value>
                <value>
                    <fullName>Agrado</fullName>
                </value>
                <value>
                    <fullName>Aguachica</fullName>
                </value>
                <value>
                    <fullName>Aguada</fullName>
                </value>
                <value>
                    <fullName>Agua De Dios</fullName>
                </value>
                <value>
                    <fullName>Aguazul</fullName>
                </value>
                <value>
                    <fullName>Agustín Codazzi</fullName>
                </value>
                <value>
                    <fullName>Aipe</fullName>
                </value>
                <value>
                    <fullName>Albán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alcalá</fullName>
                </value>
                <value>
                    <fullName>Aldana</fullName>
                </value>
                <value>
                    <fullName>Alejandría</fullName>
                </value>
                <value>
                    <fullName>Algarrobo</fullName>
                </value>
                <value>
                    <fullName>Algeciras</fullName>
                </value>
                <value>
                    <fullName>Almaguer</fullName>
                </value>
                <value>
                    <fullName>Almeida</fullName>
                </value>
                <value>
                    <fullName>Altos Del Rosario</fullName>
                </value>
                <value>
                    <fullName>Alvarado</fullName>
                </value>
                <value>
                    <fullName>Amagá</fullName>
                </value>
                <value>
                    <fullName>Amalfi</fullName>
                </value>
                <value>
                    <fullName>Ambalema</fullName>
                </value>
                <value>
                    <fullName>Anapoima</fullName>
                </value>
                <value>
                    <fullName>Ancuyá</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Cliente_deudor__r.FirstName &amp;&quot; &quot;&amp; Solicitud_de_credito_avaluo__r.Cliente_deudor__r.MiddleName &amp;&quot; &quot;&amp; Solicitud_de_credito_avaluo__r.Cliente_deudor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente deudor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_1_avaluo__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_1__r.FirstName&amp;&quot; &quot;&amp; Solicitud_de_credito_avaluo__r.Codeudor_1__r.MiddleName&amp;&quot; &quot;&amp; Solicitud_de_credito_avaluo__r.Codeudor_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_2__r.FirstName&amp;&quot; &quot;&amp;
Solicitud_de_credito_avaluo__r.Codeudor_2__r.MiddleName&amp;&quot; &quot;&amp;
 Solicitud_de_credito_avaluo__r.Codeudor_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_3__r.FirstName&amp;&quot; &quot;&amp;
Solicitud_de_credito_avaluo__r.Codeudor_3__r.MiddleName&amp;&quot; &quot;&amp;
Solicitud_de_credito_avaluo__r.Codeudor_3__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_ciiu__c</fullName>
        <label>Código ciiu</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_ciiu_avaluo__c</fullName>
        <formula>IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Abejorral&quot;)),&quot;05002&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Abriaquí&quot;)),&quot;05004&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Alejandría&quot;)),&quot;05021&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Amagá&quot;)),&quot;05030&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Amalfi&quot;)),&quot;05031&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Andes&quot;)),&quot;05034&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Angelópolis&quot;)),&quot;05036&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Angostura&quot;)),&quot;05038&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Anorí&quot;)),&quot;05040&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Anzá&quot;)),&quot;05044&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Apartadó&quot;)),&quot;05045&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Arboletes&quot;)),&quot;05051&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Argelia&quot;)),&quot;05055&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Bello&quot;)),&quot;05088&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Belmira&quot;)),&quot;05086&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Betania&quot;)),&quot;05091&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Briceño&quot;)),&quot;05107&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Buriticá&quot;)),&quot;05113&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Cáceres&quot;)),&quot;05120&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Caicedo&quot;)),&quot;05125&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Caldas&quot;)),&quot;05129&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Campamento&quot;)),&quot;05134&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Cañasgordas&quot;)),&quot;05138&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Caracolí&quot;)),&quot;05142&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Caramanta&quot;)),&quot;05145&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Carepa&quot;)),&quot;05147&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Carolina&quot;)),&quot;05150&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Caucasia&quot;)),&quot;05154&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Chigorodó&quot;)),&quot;05172&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Cisneros&quot;)),&quot;05190&quot;,
IF(AND(ISPICKVAL(Departamento_avaluo__c,&quot;Antioquia&quot;),ISPICKVAL(Ciudad_avaluo__c,&quot;Ciudad Bolívar&quot;)),&quot;05101&quot;,
&quot;No registra&quot;)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código ciiu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departamento_avaluo__c</fullName>
        <label>Departamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Atlántico</fullName>
                </value>
                <value>
                    <fullName>Bogotá D.C.</fullName>
                </value>
                <value>
                    <fullName>Bolívar</fullName>
                </value>
                <value>
                    <fullName>Boyacá</fullName>
                </value>
                <value>
                    <fullName>Caldas</fullName>
                </value>
                <value>
                    <fullName>Casanare</fullName>
                </value>
                <value>
                    <fullName>Cauca</fullName>
                </value>
                <value>
                    <fullName>Cesar</fullName>
                </value>
                <value>
                    <fullName>Chocó</fullName>
                </value>
                <value>
                    <fullName>Córdoba</fullName>
                </value>
                <value>
                    <fullName>Cundinamarca</fullName>
                </value>
                <value>
                    <fullName>Huila</fullName>
                </value>
                <value>
                    <fullName>La Guajira</fullName>
                </value>
                <value>
                    <fullName>Magdalena</fullName>
                </value>
                <value>
                    <fullName>Meta</fullName>
                </value>
                <value>
                    <fullName>Nariño</fullName>
                </value>
                <value>
                    <fullName>Norte De Santander</fullName>
                </value>
                <value>
                    <fullName>Quindío</fullName>
                </value>
                <value>
                    <fullName>Risaralda</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Sucre</fullName>
                </value>
                <value>
                    <fullName>Tolima</fullName>
                </value>
                <value>
                    <fullName>Valle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direccion_del_inmueble_avaluo__c</fullName>
        <label>Dirección del inmueble</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estrato_avaluo__c</fullName>
        <label>Estrato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_de_recepcion__c</fullName>
        <label>Fecha de recepción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_solicitud__c</fullName>
        <label>Fecha de solicitud</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_cliente_deudor__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_1__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_1__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_2__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_2__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_3__c</fullName>
        <formula>Solicitud_de_credito_avaluo__r.Codeudor_3__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_matricula_inmobiliaria_avaluo__c</fullName>
        <label>Número de matrícula inmobiliaria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perito__c</fullName>
        <label>Perito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Castillo Medina</fullName>
                </value>
                <value>
                    <fullName>Wilson Camargo</fullName>
                </value>
                <value>
                    <fullName>Bancol Inmobiliaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>$User.FirstName&amp;&quot; &quot;&amp; $User.MiddleName&amp;&quot; &quot;&amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_avaluo__c</fullName>
        <label>Resultado avalúo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Favorable</fullName>
                </value>
                <value>
                    <fullName>Desfavorable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito_avaluo__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Avalúos</relationshipLabel>
        <relationshipName>Aval_os</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo_de_inmueble_avaluo__c</fullName>
        <label>Tipo de inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Casa</fullName>
                </value>
                <value>
                    <fullName>Apartamento</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_del_avaluo__c</fullName>
        <label>Valor del avalúo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_unidad_de_construccion__c</fullName>
        <label>Valor unidad de construcción</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_unidad_privada__c</fullName>
        <label>Valor unidad privada</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>AV001_Valida_avaluo_favorable</fullName>
        <active>true</active>
        <description>Valida que se diligencien todos los campos cuando el resultado del avalúo sea favorable.</description>
        <errorConditionFormula>AND(

ISPICKVAL(Resultado_avaluo__c , &quot;Favorable&quot;),

OR(

ISBLANK(TEXT(Tipo_de_inmueble_avaluo__c )),
ISBLANK(Direccion_del_inmueble_avaluo__c),
ISBLANK(TEXT(Estrato_avaluo__c)),
ISBLANK(TEXT(Departamento_avaluo__c)),
ISBLANK(TEXT(Ciudad_avaluo__c)),
ISBLANK( Codigo_ciiu__c ),
ISBLANK(Fecha_de_solicitud__c),
ISBLANK(Fecha_de_recepcion__c),
ISBLANK(Numero_de_matricula_inmobiliaria_avaluo__c),
ISBLANK(Area_m2_construccion__c),
ISBLANK(Valor_unidad_de_construccion__c),
ISBLANK(Area_m2_privada__c),
ISBLANK(Valor_unidad_privada__c),
ISBLANK(TEXT(Perito__c))

))</errorConditionFormula>
        <errorMessage>AV-001. Si es resultado del avalúo es &quot;Favorable&quot;, debe diligenciar la información del inmueble y la información del avalúo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AV002_Valida_direccion_del_inmueble</fullName>
        <active>true</active>
        <description>Valida que no se introduzcan caracteres no permitidos.</description>
        <errorConditionFormula>OR( 

( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;°&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;_&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;¬&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;~&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;%&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;/&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;|&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;?&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;¿&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;¡&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;!&quot;)) , 
( CONTAINS(Direccion_del_inmueble_avaluo__c, &quot;`&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Direccion_del_inmueble_avaluo__c</errorDisplayField>
        <errorMessage>AV-002. Hay caracteres no permitidos en este campo. Solamente se pueden ingresar el símbolo numeral (#), guión al medio (-).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AV003_Valida_numero_de_avaluos_creados</fullName>
        <active>false</active>
        <description>Valida que solamente se creen máximo dos avalúos por solicitud.</description>
        <errorConditionFormula>Solicitud_de_credito_avaluo__r.Avaluos_creados__c &lt;= 2</errorConditionFormula>
        <errorMessage>AV-003. Solamente es permitido crear máximo dos avalúos por solicitud de crédito.</errorMessage>
    </validationRules>
</CustomObject>